--- a/Assignment1/app/build.gradle
+++ b/Assignment1/app/build.gradle
@@ -1,12 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    signingConfigs {
-    }
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.josh.project2"
-        minSdkVersion 22
+        applicationId "com.example.jtjadulco.assignment1"
+        minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -21,7 +19,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
