Added Assignment 3 and final files for Lab7
Assignment 3 deals with persistence storage and performing CRUD
operations on the data stored in the SQLite database and displaying them
in a listview.

--- a/Assignment3/app/src/main/AndroidManifest.xml
+++ b/Assignment3/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.josh.lab7">
+    package="com.example.josh.assignment3">
 
     <application
         android:allowBackup="true"
@@ -16,8 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ListActivityFragment" />
-        <activity android:name=".ListActivity"></activity>
+        <activity android:name=".TeamAdd"></activity>
+        <activity android:name=".TeamDetails"></activity>
     </application>
 
 </manifest>
